# unitmgmt

./: .gitignore  App.tsx  LinkTestComponent.tsx  README.md  app.json  apply_vision_camera_rn081_fix.sh  apply_vision_camera_rn081_fix_v2.sh  babel.config.js  crash.txt  fix_duplicate_suppress_vision_camera.sh  index.js  package-lock.json  package.json  pakage.md  require.md
Payload/unitmgmt.app/: Assets.car  Info.plist
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro  unitmgmt-v0.0.7.apk.idsig
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
backup/: MainActivity.kt  app_build.gradle
docs/: Fix_react-native-vision-camera.md
docs/plans/: 2026-02-18-unit-rental-request-design.md  2026-02-18-unit-rental-request-plan.md
docs/secure/: apk_security_analysis.md  ios_security_assessment.md  security_implementation_status.md
ios/: Podfile  Temp.m  unitmgmt-Bridging-Header.h
ios/App/: DistributionSummary.plist  ExportOptions.plist
ios/distribution/: .gitkeep  index.html  manifest.plist
ios/unitmgmt/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/unitmgmt.xcodeproj/: project.pbxproj
ios/unitmgmt.xcworkspace/: contents.xcworkspacedata
patches/: react-native-vision-camera+4.7.1.patch
scripts/: README.md  android-deploy-appsafer.sh  aws-helpers.sh  build-signed.sh  ios-release-and-deploy.sh  ios-upload-only.sh  release-and-deploy.sh  upload-only.sh  validate-aws-setup.sh
scripts/manual/: build-unified.sh  version-bump.js
src/constants/: colors.ts
src/store/: AuthContext.tsx
(+71 files in other folders)
